// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly no dates 1`] = `
<Calendar
  current={null}
  dayComponent={[Function]}
  hideExtraDays={true}
  markedDates={
    Object {
      "2018-04-08": Object {
        "marked": true,
      },
    }
  }
  markingType="period"
  onDayPress={[Function]}
/>
`;

exports[`renders correctly only startDate 1`] = `
<Calendar
  current="2018-01-01"
  dayComponent={[Function]}
  hideExtraDays={true}
  markedDates={
    Object {
      "2018-01-01": Object {
        "endingDay": true,
        "selected": true,
        "startingDay": true,
      },
      "2018-04-08": Object {
        "marked": true,
      },
    }
  }
  markingType="period"
  onDayPress={[Function]}
/>
`;

exports[`renders correctly startDate after endDate 1`] = `
<Calendar
  current="2018-01-01"
  dayComponent={[Function]}
  hideExtraDays={true}
  markedDates={
    Object {
      "2018-01-01": Object {
        "selected": true,
        "startingDay": true,
      },
      "2018-01-02": Object {
        "endingDay": true,
        "selected": true,
      },
      "2018-04-08": Object {
        "marked": true,
      },
    }
  }
  markingType="period"
  onDayPress={[Function]}
/>
`;

exports[`renders correctly startDate before endDate 1`] = `
<Calendar
  current="2018-01-01"
  dayComponent={[Function]}
  hideExtraDays={true}
  markedDates={
    Object {
      "2018-01-01": Object {
        "selected": true,
        "startingDay": true,
      },
      "2018-01-02": Object {
        "endingDay": true,
        "selected": true,
      },
      "2018-04-08": Object {
        "marked": true,
      },
    }
  }
  markingType="period"
  onDayPress={[Function]}
/>
`;

exports[`renders correctly startDate equals endDate 1`] = `
<Calendar
  current="2018-01-01"
  dayComponent={[Function]}
  hideExtraDays={true}
  markedDates={
    Object {
      "2018-01-01": Object {
        "endingDay": true,
        "selected": true,
        "startingDay": true,
      },
      "2018-04-08": Object {
        "marked": true,
      },
    }
  }
  markingType="period"
  onDayPress={[Function]}
/>
`;
